plugins/kotlin/idea/tests/testData/gradle/newMppTests/tier1/androidAppConsumesKmmLibSource/kmmLib/src/commonMain/kotlin/test/kmmLib_commonMain_api.kt
package test

expect class <!LINE_MARKER("descr='Has actuals in [project.kmmLib.iosMain, project.kmmLib.main] modules'")!>CommonMainExpect<!> {
    fun <!LINE_MARKER("descr='Has actuals in [project.kmmLib.iosMain, project.kmmLib.main] modules'")!>commonApi<!>()
}

fun produceCommonMainExpect(): CommonMainExpect = null!!
fun consumeCommonMainExpect(e: CommonMainExpect) { }
